# egm96-rs

./: .gitattributes  Cargo.toml  LICENSE  README.md
data/: egm96-15.png.aux.xml  egm96-15.wld
egm96/: Cargo.toml  build.rs
egm96-c/: Cargo.toml  build.rs
egm96-c/src/: EGM96.h  egm96.h  lib.rs  test_egm96.c
egm96-static/: Cargo.toml
egm96-static/src/: lib.rs
egm96/benches/: undulation_bench.rs
egm96/data/: README.md
egm96/src/: algo.rs  egm96_data.rs  lib.rs
src/: algo.rs  egm96_data.rs
