[package]
name = "egm96-c"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "EGM96"
crate-type = ["cdylib"]
bench = false

[dependencies]
egm96 = { path = "../egm96" }

[build-dependencies]
cbindgen = { version = "0" }
