[package]
name = "egm96-c"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "egm96"
crate-type = ["cdylib"]
bench = false

[dependencies]
egm96 = { path = "../egm96" }

[build-dependencies]
cbindgen = { version = "0" }

[features]
default = ["raster_15_min", "raster_5_min"]
raster_5_min = ["egm96/raster_5_min"]
raster_15_min = ["egm96/raster_15_min"]
