[package]
name = "egm96-static"
version.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "EGM96"
crate-type = ["staticlib"]
bench = false

[dependencies]
egm96 = { path = "../egm96" }

[build-dependencies]
cbindgen = { version = "0" }
